name:                netstring
version:             0.1
synopsis:            Netstring encoding and decoding
-- description:
homepage:            http://github.com/bnordbo/netstring
license:             MPL-2.0
license-file:        LICENSE
author:              Bjørn Nordbø
maintainer:          bn@strangedays.no
copyright:           (c) 2014 Bjørn Nordbø
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Netstring
  build-depends:
        base                  == 4.*
      , attoparsec            == 0.12.*
      , bytestring            == 0.10.*
      , bytestring-conversion >= 0.2    && < 1.0
  hs-source-dirs:      src
  default-language:    Haskell2010